--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
 - master
@@ -10,6 +6,24 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+# 1. Install Google Chrome
+- script: |
+    sudo apt-get update
+    sudo apt-get install -y wget unzip
+    sudo apt-get install -y google-chrome-stable
+  displayName: 'Install Google Chrome'
+
+# 2. Install ChromeDriver (matching Chrome version)
+- script: |
+    CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
+    echo "Detected Chrome major version: $CHROME_VERSION"
+    wget -q "https://chromedriver.storage.googleapis.com/${CHROME_VERSION}.0/chromedriver_linux64.zip"
+    unzip chromedriver_linux64.zip
+    sudo mv chromedriver /usr/local/bin/
+    chromedriver --version
+  displayName: 'Install ChromeDriver'
+
+# 3. Run Maven build and tests
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
