--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 		    <artifactId>webdrivermanager</artifactId>
 		    <version>6.3.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+		    <groupId>io.github.bonigarcia</groupId>
+		    <artifactId>webdrivermanager</artifactId>
+		    <version>6.3.3</version>
+		</dependency>
 		<dependency>
 		    <groupId>io.cucumber</groupId>
 		    <artifactId>cucumber-java</artifactId>
